<resources>
    <string name="app_name">Profile Info</string>
    <string name="profile_info">PROFILE INFO</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_firstname">Enter Firstname</string>
    <string name="enter_lastname">Enter Lastname</string>
    <string name="enter_age">Enter Age</string>
    <string name="save">save</string>
    <string name="clear">clear</string>
    <string name="enter_password">Enter Password</string>
</resources>