<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ProfileInfoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/profile_info"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/style_edit_text"
        android:drawableStart="@drawable/email"
        android:drawablePadding="5dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/style_edit_text"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="5dp"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edEmail" />

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/style_edit_text"
        android:drawableStart="@drawable/user"
        android:drawablePadding="5dp"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:textSize="24sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edPassword" />

    <EditText
        android:id="@+id/edFirstName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/style_edit_text"
        android:drawableStart="@drawable/name"
        android:drawablePadding="5dp"
        android:hint="@string/enter_firstname"
        android:inputType="text"
        android:textSize="24sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edUsername" />

    <EditText
        android:id="@+id/edLastName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/style_edit_text"
        android:drawableStart="@drawable/name"
        android:drawablePadding="5dp"
        android:hint="@string/enter_lastname"
        android:inputType="text"
        android:textSize="24sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edFirstName" />

    <EditText
        android:id="@+id/edAge"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/style_edit_text"
        android:drawableStart="@drawable/age"
        android:drawablePadding="5dp"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:textSize="24sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edLastName" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/style_button"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="@id/edAge"
        app:layout_constraintTop_toBottomOf="@id/edAge" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/style_button"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="@+id/edAge"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/btnSave"
        app:layout_constraintTop_toBottomOf="@id/edAge" />

</androidx.constraintlayout.widget.ConstraintLayout>